--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "sunaoka/emoji-parser",
-    "description": "Parsing unicode emoji text file using PHP",
-    "keywords": ["emoji", "parser", "emoji-test.txt"],
+    "name": "sunaoka/emoji-utility",
+    "description": "Utilities for Emoji using PHP",
+    "keywords": ["emoji", "utility" ,"parser", "emoji-test.txt"],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -11,19 +11,20 @@
         }
     ],
     "require": {
-        "php": "^7.0 || ^8.0"
+        "php": "^7.1 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5 || ^7.0 || ^8.0 || ^9.0 || ^10.0"
+        "phpstan/phpstan": "^1.0",
+        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0 || ^10.0"
     },
     "autoload": {
         "psr-4": {
-            "Sunaoka\\EmojiParser\\": "src/"
+            "Sunaoka\\EmojiUtility\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Sunaoka\\EmojiParser\\Tests\\": "tests/"
+            "Sunaoka\\EmojiUtility\\Tests\\": "tests/"
         }
     }
 }
