--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ^8.0"
+        "php": "^7.1 || ^8.0",
+        "symfony/polyfill-php80": "^1.28"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.0",
