--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /.github export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/phpstan.neon export-ignore
 /phpunit.xml export-ignore
 /tests export-ignore
