--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,13 +9,17 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+
+    env:
+      latest_php: 8.3
+
     strategy:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest ]
         php: [
           '7.2', '7.3', '7.4',
-          '8.0', '8.1', '8.2'
+          '8.0', '8.1', '8.2', '8.3', '8.4'
         ]
 
     name: PHP ${{ matrix.php }}
@@ -35,8 +39,7 @@ jobs:
         run: composer install --quiet --no-ansi --prefer-dist --no-progress --no-interaction
 
       - name: Migrate phpunit XML configuration
-        continue-on-error: true
-        run: vendor/bin/phpunit --migrate-configuration
+        run: vendor/bin/phpunit --migrate-configuration || true
 
       - name: Run test suite
         run: vendor/bin/phpunit --coverage-clover=coverage.xml
@@ -47,3 +50,4 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           fail_ci_if_error: false
+        if: matrix.php == env.latest_php
